traefik-dashboard/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system

spec:
  rules:
  - host: local.traefik
    http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            namespace: kube-system
            port:
              number: 80
